Added: Code for Specify Profile Pic in the Form

--- a/css/payRoll_css.css
+++ b/css/payRoll_css.css
@@ -1,4 +1,4 @@
-
+/* UC 1 */
 body {
     margin: 0;
     height: 100%;
@@ -44,6 +44,8 @@ body {
 * {
     box-sizing: border-box;
 }
+
+/* UC 2 */
 
 .form-content {
     min-height: calc(100% - 80px);
@@ -103,5 +105,23 @@ label {
     border: 1px solid #ccc;
     border-radius: 4px;
     resize: Vertical;
-
 }
+
+/* UC 3 */
+.profile-radio-content {
+    display: flex;
+    flex-direction: row;
+}
+
+.profile-radio-content > label {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+}
+
+.profile {
+    width: 40px;
+    border-radius: 50%;
+    margin-left: 12px;
+}
+
