--- a/css/payRoll_css.css
+++ b/css/payRoll_css.css
@@ -183,6 +183,13 @@ select {
     }
 }
 
+error-output {
+    margin-left: 10px;
+    font-size: 12px;
+    font-style: italic;
+    color: red;
+}
+
 @media only screen and (max-width:600px) {
     .form {
         margin-top: 10px;
